# advent_of_code_2024

./: .gitignore  pyproject.toml
01/: solution.ipynb  solution.py
02/: solution.ipynb  solution.py
03/: solution.ipynb  solution.py
04/: solution.ipynb  solution.py
05/: solution.ipynb  solution.py
06/: solution.ipynb  solution.py
07/: solution.ipynb  solution.py
08/: solution.py
09/: solution.py
10/: solution.py
11/: solution.py
12/: solution.py
13/: solution.py
14/: solution.py
15/: solution.py
16/: solution.py
