[project]
name = "advent-of-code-2024"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "networkx>=3.4.2",
    "numpy>=2.1.3",
    "polars>=1.16.0",
    "ruff>=0.8.1",
    "scipy>=1.14.1",
    "shapely>=2.0.6",
]
